Configure screen scale for running layout tests on plus devices https://bugs.webkit.org/show_bug.cgi?id=173319

Reviewed by Tim Horton.

Source/WebKit2:

* Platform/spi/ios/UIKitSPI.h: Both this and UIKitTestSPI.h define UIKeyboard. Use
a define guard to prevent re-definition.

Tools:

* DumpRenderTree/DumpRenderTree.xcodeproj/project.pbxproj: Include UIKitTestSPI.h in project.
* DumpRenderTree/mac/DumpRenderTree.mm:
(dumpRenderTree): Set screen scale to 2.0.
* TestRunnerShared/spi/UIKitTestSPI.h: Copied from Tools/WebKitTestRunner/ios/UIKitSPI.h,
add _setScale for UIScreen.
* WebKitTestRunner/WebKitTestRunner.xcodeproj/project.pbxproj: Include UIKitTestSPI.h in project.
* WebKitTestRunner/cocoa/TestRunnerWKWebView.mm: Import UIKitTestSPI.h instead of UIKitSPI.h.
* WebKitTestRunner/ios/HIDEventGenerator.h: Ditto.
* WebKitTestRunner/ios/HIDEventGenerator.mm: Ditto.
* WebKitTestRunner/ios/PlatformWebViewIOS.mm: Ditto.
* WebKitTestRunner/ios/TestControllerIOS.mm: Ditto.
(WTR::TestController::platformInitialize): Set screen scale to 2.0.
* WebKitTestRunner/ios/UIKitSPI.h: Moved to TestRunnerShared/spi/UIKitTestSPI.h.
* WebKitTestRunner/ios/UIScriptControllerIOS.mm: Import UIKitTestSPI.h instead of UIKitSPI.h.
* WebKitTestRunner/ios/mainIOS.mm: Ditto.


Canonical link: https://commits.webkit.org/190251@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218275 268f45cc-cd09-0410-ab3c-d52691b4dbfc